// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DiagnosticViewToggleTest renders details view link when the test does not have a guidance 1`] = `
<div
  className="diagnosticViewToggle"
>
  <div
    className="title"
  >
    Automated checks
  </div>
  <div
    className="toggle"
  >
    <VisualizationToggle
      checked={false}
      componentRef={
        {
          "current": null,
        }
      }
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      visualizationName="Automated checks"
    />
  </div>
  <div>
    <StyledLinkBase
      className="insights-link"
      href="#"
      onClick={[Function]}
    >
      List view and filtering
    </StyledLinkBase>
  </div>
  <div
    className="shortcut"
  >
    Ctrl+Shift+1
  </div>
</div>
`;

exports[`DiagnosticViewToggleTest renders spinner while scanning 1`] = `
<div
  className="diagnosticViewToggle"
>
  <div
    className="title"
  >
    Headings
  </div>
  <div
    className="toggle"
  >
    <StyledSpinnerBase
      componentRef={[Function]}
      size={1}
    />
  </div>
  <div>
    <ContentLink
      deps={{}}
      linkText="How to test headings"
      reference={[Function]}
    />
  </div>
  <div
    className="shortcut"
  >
    Ctrl+Shift+3
  </div>
</div>
`;

exports[`DiagnosticViewToggleTest renders toggle when injection failed 1`] = `
<div
  className="diagnosticViewToggle"
>
  <div
    className="title"
  >
    Automated checks
  </div>
  <div
    className="toggle"
  >
    <VisualizationToggle
      checked={false}
      componentRef={
        {
          "current": null,
        }
      }
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      visualizationName="Automated checks"
    />
  </div>
  <div>
    <StyledLinkBase
      className="insights-link"
      href="#"
      onClick={[Function]}
    >
      List view and filtering
    </StyledLinkBase>
  </div>
  <div
    className="shortcut"
  >
    Ctrl+Shift+1
  </div>
</div>
`;

exports[`DiagnosticViewToggleTest renders toggle when not scanning 1`] = `
<div
  className="diagnosticViewToggle"
>
  <div
    className="title"
  >
    Headings
  </div>
  <div
    className="toggle"
  >
    <VisualizationToggle
      checked={false}
      componentRef={
        {
          "current": null,
        }
      }
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      visualizationName="Headings"
    />
  </div>
  <div>
    <ContentLink
      deps={{}}
      linkText="How to test headings"
      reference={[Function]}
    />
  </div>
  <div
    className="shortcut"
  >
    Ctrl+Shift+3
  </div>
</div>
`;

exports[`DiagnosticViewToggleTest renders toggle when scanning for a different visualization 1`] = `
<div
  className="diagnosticViewToggle"
>
  <div
    className="title"
  >
    Headings
  </div>
  <div
    className="toggle"
  >
    <VisualizationToggle
      checked={false}
      componentRef={
        {
          "current": null,
        }
      }
      disabled={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      visualizationName="Headings"
    />
  </div>
  <div>
    <ContentLink
      deps={{}}
      linkText="How to test headings"
      reference={[Function]}
    />
  </div>
  <div
    className="shortcut"
  >
    Ctrl+Shift+3
  </div>
</div>
`;
